--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 					const params = new URLSearchParams({
 						timestamp,
 						agent: deviceName + interactionMode,
-						movements,
+						potValues,
 						type,
 						location: `${latitude},${longitude}`,
 						message,
