--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 						text(labels[i], width * 0.9, i * lineHeight + lineHeight / 2);
 					}
 					// Detect movement and display corresponding text
-					if (startDetectMovement && !speaking){
+					if (startDetectMovement){
 						checkMovement();
 					}
 				}
@@ -689,7 +689,7 @@
 						});
 
 						// Check if partMoving or directionMoving are different from their previous values and add movement to the sequence buffer.
-						if (partMoving !== previousPart || directionMoving !== previousDirection) {
+						if ((partMoving !== previousPart || directionMoving !== previousDirection) && !speaking) {
 							// Add movement to the sequence buffer
 							console.log("--Movement: "+partMoving+" "+directionMoving);
 							if (noNarrative){
