--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				}
 			}
 
-			let sessionId = 'loading';
+			let sessionId = '';
 			function generateSessionId() {
 				for (let i = 0; i < 6; i++) {
 					sessionId += Math.random().toString(36).charAt(2); // Generates a random alphanumeric character
