--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 						type,
 						location: `${latitude},${longitude}`,
 						message,
-						messageID_tmp
+						messageID
 					});
 
 					fetch(`${scriptURL}?${params.toString()}`, {
