--- a/index.html
+++ b/index.html
@@ -1048,8 +1048,8 @@
 			}
 
 			// Azure TTS API details
-			const endpoint = "https://germanywestcentral.tts.speech.microsoft.com/cognitiveservices/v1";
-			const subscriptionKey = "75Bc4nsx3ZtRbBmQbn8QOHX2lWADLdPfVZHOir3T4x2ybzeoDf2OJQQJ99AKACPV0roXJ3w3AAAYACOGwUuN";
+			const endpoint = "https://germanywestcentral.api.cognitive.microsoft.com/";
+			const subscriptionKey = "9PhQZhVP3ZRybebW3qaOiHU0EZc6eKmZGbP74vpuM2wqradXDdc2JQQJ99BDACPV0roXJ3w3AAAYACOGCcy5";
 			const voiceName = "en-GB-SoniaNeural"; // Use en-GB-SoniaNeural
 			const outputFormat = "audio-24khz-160kbitrate-mono-mp3"; // Output format for audio
 
