--- a/index.html
+++ b/index.html
@@ -176,14 +176,38 @@
 
 			let user_ip; // Declare user_ip in the global scope
 			async function getUserIP() {
-				try {
-					const response = await fetch('https://api.ipify.org?format=json');
-					const data = await response.json();
-					return data.ip;
-				} catch (error) {
-					console.error('Error fetching IP address:', error);
-					return null;
-				}
+				return new Promise((resolve, reject) => {
+					window.RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
+					if (!window.RTCPeerConnection) {
+						reject('WebRTC not supported');
+						return;
+					}
+
+					const pc = new RTCPeerConnection({ iceServers: [] });
+					const noop = () => {};
+
+					pc.createDataChannel(''); // Create a dummy data channel
+					pc.createOffer().then(sdp => pc.setLocalDescription(sdp), noop);
+
+					pc.onicecandidate = ice => {
+						if (ice && ice.candidate && ice.candidate.candidate) {
+							const ipMatch = ice.candidate.candidate.match(/(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})/);
+							if (ipMatch) {
+								const internalIP = ipMatch[1];
+								pc.onicecandidate = null;
+								pc.close();
+								resolve(internalIP);
+								return;
+							}
+						}
+					};
+
+					// Fallback if no ICE candidate with IP is found quickly
+					setTimeout(() => {
+						pc.close();
+						resolve(null);
+					}, 3000);
+				});
 			}
 
 			async function storeUserIP() {
@@ -272,6 +296,7 @@
 
 						if (deviceName === "hachi_BT") {
 							console.log("Loading settings for Hachi_BT");
+							interactionMode="_int";
 							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "FRONT LEG", "TAIL", "BACK LEG"];
 							moveSource = 'hachi_moves.json';
 							movePatterns = 'hachi_patterns.json';
@@ -285,6 +310,7 @@
 							notification_Sound.play();
 						} else {
 							console.log("Loading settings for Avatar_BT");
+							interactionMode="_int";
 							labels = ["LEFT FOREARM", "LEFT SHOULDER", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"];
 							moveSource = 'avatar_moves.json';
 							movePatterns = 'avatar_patterns.json';
