--- a/index.html
+++ b/index.html
@@ -176,38 +176,14 @@
 
 			let user_ip; // Declare user_ip in the global scope
 			async function getUserIP() {
-				return new Promise((resolve, reject) => {
-					window.RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
-					if (!window.RTCPeerConnection) {
-						reject('WebRTC not supported');
-						return;
-					}
-
-					const pc = new RTCPeerConnection({ iceServers: [] });
-					const noop = () => {};
-
-					pc.createDataChannel(''); // Create a dummy data channel
-					pc.createOffer().then(sdp => pc.setLocalDescription(sdp), noop);
-
-					pc.onicecandidate = ice => {
-						if (ice && ice.candidate && ice.candidate.candidate) {
-							const ipMatch = ice.candidate.candidate.match(/(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})/);
-							if (ipMatch) {
-								const internalIP = ipMatch[1];
-								pc.onicecandidate = null;
-								pc.close();
-								resolve(internalIP);
-								return;
-							}
-						}
-					};
-
-					// Fallback if no ICE candidate with IP is found quickly
-					setTimeout(() => {
-						pc.close();
-						resolve(null);
-					}, 3000);
-				});
+				try {
+					const response = await fetch('https://api.ipify.org?format=json');
+					const data = await response.json();
+					return data.ip;
+				} catch (error) {
+					console.error('Error fetching IP address:', error);
+					return null;
+				}
 			}
 
 			async function storeUserIP() {
