--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
 			let cachedTagInfo;
 			async function readTag() {
 				try {
-					if (tagID === previousTagID || tagID === "0" || speaking) {
+					if (tagID === previousTagID || tagID === 0 || speaking) {
 						// If tagID is the same as the previous one or is 0, do nothing
 						return;
 					} else {
@@ -1505,7 +1505,7 @@
 			let previousPassage = ''; // Initialize previous passage value
 			let previousTagID = ''; // Initialize previous tag value
 
-			// Function to read data from the database
+			// Function to x data from the database
 			function readFromDatabase(deviceName) {
 				// Read from the other database based on deviceName
 				const otherDatabaseName = (deviceName === 'hachi_BT') ? 'avatar_data': 'hachi_data';
