--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 				function receiveData(data) {
 					let values = data.split(",");
 					//console.log(values);
-					tagID = values.pop(); // Remove and store the last element as tagID..
+					tagID = values.pop(); // Remove and store the last element as tagID.
 					readTag();
 					if (values.length === numPotentiometers) { // Check if the length of values is 8
 						for (let i = 0; i < values.length; i++) {
@@ -1265,7 +1265,7 @@
 			var noNarrative;
 			var speakFancy;
 
-			var previousTagID = ""; // Variable to store the previous tagID
+			var previousTagID = 0 // Variable to store the previous tagID
 
 			let cachedTagInfo;
 			async function readTag() {
