--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
 			let cachedCheckpoints;
 			let lastCheckedIndex = 0; // Initialize the index of the last checked key
 			let currentCheckpoint = "none";
-			let chkPointDistance = [];
+			let chkPointDistance = [0];
 
 			let previousCheckpointKey = null;
 			let previousChkPointDistance = null;
