--- a/index2.html
+++ b/index2.html
@@ -289,7 +289,7 @@
 					}
 
 					// Update UI to reflect a "connected" state (even though it's simulated)
-					document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Hachi (Simulated)';
+					document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Hachi';
 					isConnected = true;
 					startDetectMovement = true;
 					blueToothStatus = "Online";
