--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
 				<button
 					id="interactButton"
 					class="button interact-button"
-					onclick="forward_Sound.play(),wakeLock(), interactFunction(), displayText('Interacting through an avatar.')"
+					onclick="forward_Sound.play(),wakeLock(), connectToDevice()"
 				>
 					<span class="material-symbols-outlined" style="vertical-align: middle;">back_hand</span>Interact
 				</button>
@@ -289,7 +289,7 @@
 					}
 
 					// Update UI to reflect a "connected" state (even though it's simulated)
-					document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Hachi';
+					document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Hachi (Simulated)';
 					isConnected = true;
 					startDetectMovement = true;
 					blueToothStatus = "Online";
@@ -299,7 +299,7 @@
 				}
 			}
 			// Attach click event listener to button.
-			document.getElementById("connectButton").addEventListener("click", connectToDevice);
+			//document.getElementById("connectButton").addEventListener("click", connectToDevice);
 
 			// Function to handle incoming data from UART
 			function handleCharacteristicValueChanged(event) {
