--- a/index2.html
+++ b/index2.html
@@ -256,6 +256,7 @@
 				try {
 					// Directly set deviceName to "hachi_BT" to skip BLE connection
 					deviceName = "hachi_BT";
+					let databaseName;
 
 					console.log("Skipping BLE connection and directly loading settings for Hachi_BT");
 					interactionMode = "_int";
@@ -265,6 +266,12 @@
 					sentenceSource = 'hachi_sentences.json';
 					tagSource = 'tags.json';
 					initializeSounds();
+
+					// Integrate toggleDeviceName2 logic directly
+					databaseName = (deviceName === 'hachi_BT') ? 'avatar_data' : 'hachi_data';
+					off(ref(database, databaseName));
+					readFromDatabase(deviceName); // Read data after writing
+					console.log("Reading from: " + databaseName);
 
 					characterName = "Hachi";
 					if (window[characterName + "_Sound"]) {
@@ -287,12 +294,13 @@
 					document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Hachi (Simulated)';
 					isConnected = true;
 					startDetectMovement = true;
-					blueToothStatus = "Online";
+					blueToothStatus = "Simulated Online";
 
 				} catch (error) {
 					console.error("Error during simulated connection: " + error);
 				}
 			}
+
 			// Attach click event listener to button.
 			//document.getElementById("connectButton").addEventListener("click", connectToDevice);
 
