--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 		<div id="avatarBTdiv">
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
-				<button id="listenButton" class="button listen-button" onclick="forward_Sound.play(), wakeLock(),listenFunction()">
+				<button id="listenButton" class="button listen-button" onclick="forward_Sound.play(), wakeLock(),listenFunction()" disabled>
 					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span>Listen
 				</button>
 
