--- a/index2.html
+++ b/index2.html
@@ -219,13 +219,13 @@
 					characterName = "Hachi";
 					initializeSounds();
 				} else {
-					deviceName = "avatar_BT";
+					deviceName = "hachi_BT";
 					console.log("Loading settings for "+ deviceName);
 					interactionMode="_int";
-					moveSource = 'avatar_moves.json';
-					movePatterns = 'avatar_patterns.json';
-					sentenceSource = 'avatar_sentences.json';
-					characterName = "Buro";
+					moveSource = 'hachi_moves.json';
+					movePatterns = 'hachi_patterns.json';
+					sentenceSource = 'hachi_sentences.json';
+					characterName = "Hachi";
 					initializeSounds();
 				}
 			}
