--- a/index2.html
+++ b/index2.html
@@ -514,7 +514,7 @@
 
 				function setup() {
 					var avatarBTCanvas = createCanvas(windowWidth, windowHeight * 0.35);
-					avatarBTCanvas.parent("avatarCanvas");
+					//avatarBTCanvas.parent("avatarCanvas");
 					potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
 					lineColors = new Array(numPotentiometers);
 					backgroundColors = new Array(numPotentiometers);
