--- a/index2.html
+++ b/index2.html
@@ -513,8 +513,14 @@
 				let tagID = 0;
 
 				function setup() {
+
+					const shouldLoadAvatar = false;
+					if (!shouldLoadAvatar) {
+						return; // Exit the function early
+					}
+
 					var avatarBTCanvas = createCanvas(windowWidth, windowHeight * 0.35);
-					//avatarBTCanvas.parent("avatarCanvas");
+					avatarBTCanvas.parent("avatarCanvas");
 					potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
 					lineColors = new Array(numPotentiometers);
 					backgroundColors = new Array(numPotentiometers);
