--- a/index2.html
+++ b/index2.html
@@ -75,7 +75,10 @@
 			</div>
 		</div>
 		<!-- Movement tracking-->
-		<div id="avatarCanvas"></div>
+		<div id="avatarCanvas">
+			<img class="logo" src="hachi.svg" alt="Logo" />
+			<p id="loading-text">Hachi</p>
+		</div>
 		<!-- Status-->
 		<div id="currentLocation"></div>
 		<!-- Message>-->
