--- a/index2.html
+++ b/index2.html
@@ -76,8 +76,7 @@
 		</div>
 		<!-- Movement tracking-->
 		<div id="avatarCanvas">
-			<img class="logo" src="hachi.svg" alt="Logo" />
-			<p id="loading-text">Hachi</p>
+			<img class="hachi_control" src="hachi.svg" alt="" />
 		</div>
 		<!-- Status-->
 		<div id="currentLocation"></div>
