--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
 				<button id="listenButton" class="button listen-button" onclick="forward_Sound.play(), wakeLock(),listenFunction()" disabled>
-					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span>Listen
+					disabled
 				</button>
 
 				<!-- Toggle Switch -->
