--- a/index2.html
+++ b/index2.html
@@ -77,6 +77,11 @@
 		<!-- Movement tracking-->
 		<div id="avatarCanvas">
 			<img class="hachi_control" src="hachi.svg" alt="" />
+			<button id="bark_btn" class="control-button">Barking</button>
+			<button id="sniff_btn" class="control-button">Sniffing</button>
+			<button id="jump_btn" class="control-button">Jumping</button>
+			<button id="back_btn" class="control-button">Standing back leg</button>
+			<button id="front_btn" class="control-button">Standing front leg</button>
 		</div>
 		<!-- Status-->
 		<div id="currentLocation"></div>
