--- a/index2.html
+++ b/index2.html
@@ -79,6 +79,7 @@
 			<img class="hachi_control" src="hachi.svg" alt="" />
 			<button id="bark_btn" class="control-button">Barking</button>
 			<button id="sniff_btn" class="control-button">Sniffing</button>
+			<button id="grab_btn" class="control-button">Grabbing</button>
 			<button id="jump_btn" class="control-button">Jumping</button>
 			<button id="back_btn" class="control-button">Standing back leg</button>
 			<button id="front_btn" class="control-button">Standing front leg</button>
